--- a/common/common.htmlarea/src/main/resources/web/htmlarea/HtmlArea.css
+++ b/common/common.htmlarea/src/main/resources/web/htmlarea/HtmlArea.css
@@ -7,6 +7,7 @@ background:#FEF url(/resources/icon/info.png) center no-repeat !important;}
 .h_grid_tr td{line-height: 100%;vertical-align:middle;/*设置垂直居中*/}
 
 .row-table {
+	width:100%;
 	background: #666;
 }
 
@@ -89,3 +90,5 @@ background:#FEF url(/resources/icon/info.png) center no-repeat !important;}
 .modal.in .modal-dialog {
     width: 728px;
 }
+
+.table,.table-hover,.row-table{width:960px;}
